Fix surefire arguments